--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <section>
                 <audio id="audio" hidden>
                     <source src="./assets/music/Immortal.mp3">
+                    Your browser does not support the audio element.
                 </audio>
             </section>
         </main>
