--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
                     <div class="volume"><i class="fa fa-volume-off"></i></div>
                     <input type="range" min="0" max="100" value="1" step="0.01" class="volume_range"> 
+                    <div class="volume"><i class="fa fa-repeat"></i></div>
                   
                 </div>
             </section>
